# django-docker-webapp-demo

./: .coveragerc  .dockerignore  .env.dev  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pythonapp.yml
finance_blog/: apps.py  forms.py  models.py  urls.py  views.py
finance_blog/docs/: content_api.json  quotes_api.json
finance_blog/migrations/: 0001_initial.py  0002_load_api_json_data.py
finance_blog/static/blog/css/: style.css
finance_blog/templates/blog/: article.html  base.html  home.html  ticker.html
finance_blog/templates/throwback/: article.html  base.html  home.html  ticker.html
finance_blog/tests/: test_finance_blog.py
motley_demo/: asgi.py  settings.py  urls.py  wsgi.py
