[tool.poetry]
name = "motley_demo"
version = "0.1.0"
description = "Motley Fool Developer Interview Project"
authors = ["Nathaniel Compton <nathanielcompton@gmail.com>"]
license = "MIT"

[tool.black]
max-line-length = 90

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.5"
pytest-django = "^3.8.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
